Smb4K 1.1.0 (2014-01-06):
- Smb4K needs KDE SC version 4.8 or later.
- Fixed many issues reported by krazy2. On the way several minor changes
  to the core classes were applied.
- Made Smb4K a kdeinit executable.
- Renamed the mount helper to net.sourceforge.smb4k.mounthelper.
- Added a plasmoid. It needs KDE 4.10.0 or later. If this requirement is not
  met, its installation will be skipped.
- Added Smb4KNetworkObject class that derives from QObject and encapsulates
  a network item (workgroup, host, or share).
- Added Smb4KBookmarkObject class that derives from QObject and encapsulates
  a bookmark.
- Introduced a new dynamic main tool bar. If you do not like it, you can enable 
  old tool bars via the 'Shown Toolbars' menu item.
- Added Wake-On-LAN (WOL) feature (closes SF ticket #27).
- Introduced Smb4KDeclarative class that provides an interface for Plasma/
  QtQuick to the core classes.
- Improved mounting under FreeBSD. We do not need the ~/.nsmbrc file anymore
  because the mount helper will feed the password to the mount process.
- Revised Smb4KGlobal namespace:
  + Merged Smb4KCore class.
  + Added Process enumeration in favor of per class solutions.
- Revised Smb4KHost class:
  + The unc() function now only returns the UNC in the form //HOST. If you
    also need the username, password or port in the string, use the url() 
    function.
  + Removed ipChecked() function.
  + Removed infoChecked() function.
  + Added hasIP() function.
  + Added hasInfo() function.
- Revised Smb4KShare class:
  + The unc() function now only returns the UNC in the form //HOST/Share. If 
    you also need the username, password or port in the string, use the url() 
    function.
  + Added setURL() function that takes a string as argument.
- Revised Smb4KCustomOptions class:
  + Added functions for Wake-On-LAN.
  + Added functions for defining the security mode used by mount.cifs.
- Revised Smb4KBookmark class:
  + Renamed function group() to groupName().