@@ -51,7 +51,7 @@ static const char authors[] =
   I18N_NOOP( "\u00A9 2003-2014 Alexander Reinholdt" );
 
 
-extern "C" KDE_EXPORT int kdemain( int argc, char **argv )
+int main( int argc, char **argv )
 {
   KAboutData aboutData( "smb4k",
                         0,
